--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,10 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    env:
+      Greeting: Hello
+      CHECKMARX_BASE_URL: "http://kk.com"
+      
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -27,7 +30,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: echo Hello, world $Greeting $CHECKMARX_BASE_URL !
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
@@ -36,6 +39,7 @@ jobs:
           echo test, and deploy your project.
           pwd
           ls -l
+          env | grep CHECKMARX_BASE_URL
 
       # Run a cxFlow container
       - name: Run a cxFlow container
