--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,4 +45,4 @@ jobs:
       - name: Run a cxFlow container
         run: |
           docker pull checkmarx/cx-flow
-          docker run checkmarx/cx-flow --spring.config.location=./application_LGV.yml --env-file=.checkmarx --spring.profiles.active=sast --scan --cx-project=KAKA --app=KAKA_APP --f=. 
+          docker run checkmarx/cx-flow --env-file=<(env) --spring.profiles.active=sast --scan --cx-project=KAKA --app=KAKA_APP --f=. 
