--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,11 @@ jobs:
         run: |
           docker pull checkmarx/cx-flow
           docker run -v $(pwd)/application_LGV.yml:/app/application_LGV.yml -v $(pwd):/app/src checkmarx/cx-flow \
-               --spring.config.location=/app/application_LGV.yml --spring.profiles.active=sast --scan --cx-project=KAKA --app=KAKA_APP --f=/app/src --namespace=${{ github.repository_owner }} --repo-name=${{ github.event.repository.name }} --branch=${{ github.head_ref }} --merge-id=${{ github.event.number }} 
+               --spring.config.location=/app/application_LGV.yml --spring.profiles.active=sast \
+               --scan \
+               --cx-project=KAKA --app=KAKA_APP --f=/app/src \
+               --namespace=${{ github.repository_owner }} --repo-name=${{ github.event.repository.name }} --branch=${{ github.head_ref }} --merge-id=${{ github.event.number }} \
+               --cx-flow.filterSeverity --cx-flow.filterCategory \
+               --cx-flow.thresholds.high=0 --cx-flow.thresholds.medium=1
           #docker run -v $(pwd)/application_LGV.yml:/app/application_LGV.yml checkmarx/cx-flow --spring.config.location=/app/application_LGV.yml --spring.profiles.active=sast --scan --cx-project=KAKA --app=KAKA_APP --f=. 
           #docker run checkmarx/cx-flow --spring.profiles.active=sast --scan --cx-project=KAKA --app=KAKA_APP --f=. 
