--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,7 @@ jobs:
                --cx-project=KAKA --app=KAKA_APP --f=/app/src \
                --namespace=${{ github.repository_owner }} --repo-name=${{ github.event.repository.name }} --branch=${{ github.head_ref }} --merge-id=${{ github.event.number }} \
                --cx-flow.filterSeverity --cx-flow.filterCategory \
-               --cx-flow.thresholds.high=0 --cx-flow.thresholds.medium=1
+               --cx-flow.thresholds.high=0 --cx-flow.thresholds.medium=1 \
+               --github.url=http:jeje.com
           #docker run -v $(pwd)/application_LGV.yml:/app/application_LGV.yml checkmarx/cx-flow --spring.config.location=/app/application_LGV.yml --spring.profiles.active=sast --scan --cx-project=KAKA --app=KAKA_APP --f=. 
           #docker run checkmarx/cx-flow --spring.profiles.active=sast --scan --cx-project=KAKA --app=KAKA_APP --f=. 
