--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,10 +53,9 @@ jobs:
                --scan \
                --cx-project=KAKA --app=KAKA_APP --f=/app/src \
                --namespace=${{ github.repository_owner }} --repo-name=${{ github.event.repository.name }} --branch=${{ github.head_ref }} --merge-id=${{ github.event.number }} \
-               --cx-flow.filterSeverity --cx-flow.filterCategory \
                --cx-flow.thresholds.high=0 --cx-flow.thresholds.medium=1 \
                --github.token=${{ secrets.LGV_GH_API_TOKEN }}
-               
+          #--cx-flow.filterSeverity --cx-flow.filterCategory \     
           # --github.url=http://jeje.com  --github.apiurl=http://jeje.com  --github.api-url=http://je-je.com \
                
           #docker run -v $(pwd)/application_LGV.yml:/app/application_LGV.yml checkmarx/cx-flow --spring.config.location=/app/application_LGV.yml --spring.profiles.active=sast --scan --cx-project=KAKA --app=KAKA_APP --f=. 
