--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,8 @@ jobs:
                --cx-project=KAKA --app=KAKA_APP --f=/app/src \
                --namespace=${{ github.repository_owner }} --repo-name=${{ github.event.repository.name }} --branch=${{ github.head_ref }} --merge-id=${{ github.event.number }} \
                --cx-flow.thresholds.high=0 --cx-flow.thresholds.medium=1 \
-               --github.token=${{ secrets.LGV_GH_API_TOKEN }}
+               --github.token=${{ secrets.LGV_GH_API_TOKEN }} \
+               --logging.level.com.checkmarx=debug
           #--cx-flow.filterSeverity --cx-flow.filterCategory \     
           # --github.url=http://jeje.com  --github.apiurl=http://jeje.com  --github.api-url=http://je-je.com \
                
